--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,6 @@ openai==2.7.1
 anthropic==0.31.2
 httpx==0.27.2
 httpcore==1.0.6
-Pillow==10.4.0
+Pillow==10.4.0youtube-transcript-api==0.6.3
+beautifulsoup4==4.12.3
+requests==2.32.3
